// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`serializeMd fixures Combination of bold and italic at the start of a block losing formatting 1`] = `
"_**Italic**_ **in a bold paragraph**

**This is an _Italic_** **in a bold paragraph**
"
`;

exports[`serializeMd fixures should serialize a \\n within a block qoute as new line 1`] = `
"> Block quote\\
> with a new line
"
`;

exports[`serializeMd fixures should serialize a codeblock 1`] = `
"\`\`\`
Code block 1 line 1
Code block 1 line 2
Code block 1 line 3
Code block 1 line 4
\`\`\`
"
`;

exports[`serializeMd fixures should serialize a value with inline code 1`] = `
"_**\`Inline code\`**_

_\`Inline code\`_
"
`;

exports[`serializeMd fixures should serialize a value within a block qoute as a single line 1`] = `
"> Block quote with a new line _**\` Inline code\`**_
"
`;

exports[`serializeMd fixures should serialize marks with trailing whitespace 1`] = `
"Make text **bold**, _italic_, <u>underlined</u>, or apply a _**<u>combination</u>**_ of these styles for a visually striking effect.
"
`;

exports[`serializeMd fixures should serialize three leading \\n at the end of a paragraph qoute as a new line 1`] = `
"Paragaph with two new Lines\\
\\ 
<br />
"
`;

exports[`serializeMd fixures should serialize two \\n within a block qoute as two new lines 1`] = `
"> Block quote\\
> \\
> with a new line
"
`;

exports[`serializeMd fixures should serialize two leading \\n at the end of a block qoute as a new line 1`] = `
"> Block quote\\ 
> <br />
"
`;

exports[`serializeMd should serialize a simple paragraph 1`] = `
"# Playground

## Comments and suggestions

Add comments to your content to provide additional conte1xt, , or collaborate with others

### Heading

* 1

  * 2

    * 3

      * 4

| 1-1 | 1-2 |
| --- | --- |
| 2-1 | 2-2 |

> blockQuote

***

normal **bold**_italic_~~strikethrough~~\`code\`_**combine**_[link](https://example.com)$E=mc^2$

![test](https://images.unsplash.com/photo-1712688930249-98e1963af7bd?q=80\\&w=2070\\&auto=format\\&fit=crop\\&ixlib=rb-4.0.3\\&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D "test")

\`\`\`javascript
// Use code blocks to showcase code snippets
function greet() {
  console.info('Hello World!');
}
\`\`\`

$$
f(x)
$$

<toc />

* [x] Todo item

* Numbered list item

Centered text

Text with custom line height

Mention: @User

Date: 2024-01-01

Text with <highlight style="background-color: yellow;">highlight</highlight> and <u>underline</u> and keyboard formatting

Text with color and background color
"
`;

exports[`serializeMd should serialize paragraphs with only a new line to a <br /> 1`] = `
"
<br />


<br />
"
`;

exports[`serializeMd should serialize the leading break at the end of a block qoute as a <br /> 1`] = `
"Paragaph with a new Line
<br />
"
`;
